--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,10 @@ dependencies:
   pre:
     # Need docs for the JavaDoc task.
     - echo y | android update sdk --no-ui --all --filter "doc"
+    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
+    - echo y | android update sdk --no-ui --all --filter "platform-tools"
+    - echo y | android update sdk --no-ui --all --filter "tools"
+    - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.3"
 
 test:
   override:
