--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
+// Moar memory is required for in-process dex.
+org.gradle.jvmargs=-Xmx2g
+
+
 // Android build details
 ANDROID_BUILD_TOOLS_VERSION=23.0.3
 ANDROID_MIN_SDK_VERSION=8
@@ -10,7 +14,7 @@ ANDROID_VERSION_NAME=2.0.0
 
 
 // Dependency version matchers
-ANDROID_GRADLE_PLUGIN_VERSION_MATCHER=2.0.0
+ANDROID_GRADLE_PLUGIN_VERSION_MATCHER=2.1.0
 ANDROID_SUPPORT_ANNOTATION_VERSION_MATCHER=]23.0.0,)
 ANDROID_SUPPORT_V4_VERSION_MATCHER=]23.0.0,)
 ESPRESSO_CORE_VERSION_MATCHER=2.2.2
