--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,10 @@ dependencies:
     - echo y | android update sdk --no-ui --all --filter "platform-tools"
     - echo y | android update sdk --no-ui --all --filter "tools"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.3"
+  override:
+    - ./gradlew resolveAllDependencies
+  cache_directories:
+    - .gradle
 
 test:
   override:
@@ -38,7 +42,7 @@ test:
     - adb logcat:
         background: true
 
-    - ./gradlew -PIS_PREDEXING_ENABLED=false assemble connectedCheck lint findbugs releaseJavadoc dependencyUpdates --stacktrace
+    - ./gradlew -PIS_PREDEXING_ENABLED=false assemble connectedCheck lint findbugs releaseJavadoc dependencyUpdates --stacktrace --profile
 
     # copy the artifacts and test reports
     - cp -r pluginHostSdkLib/build/outputs $CIRCLE_ARTIFACTS
