Fixup build script for Javadoc and Findbugs

--- a/pluginHostSdkLib/build.gradle
+++ b/pluginHostSdkLib/build.gradle
@@ -54,9 +54,12 @@ android.libraryVariants.all { variant ->
         description "Generates Javadoc for $variant.name."
         def androidHome = System.getenv('ANDROID_HOME')
         source = variant.javaCompile.source
-        classpath = files(variant.javaCompile.classpath.files) + files("${androidHome}/platforms/${android.compileSdkVersion}/android.jar")
-        options.linksOffline('http://developer.android.com/reference/', "${androidHome}/docs/reference")
-        options.links('http://jcip.net.s3-website-us-east-1.amazonaws.com/annotations/doc/', 'http://twofortyfouram.github.io/android-annotation/', 'http://twofortyfouram.github.io/android-plugin-api-for-locale/')
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+        classpath += variant.javaCompile.classpath
+        classpath += variant.javaCompile.outputs.files
+        options.linksOffline('https://developer.android.com/reference/', "${androidHome}/docs/reference")
+        options.links('http://jcip.net.s3-website-us-east-1.amazonaws.com/annotations/doc/', 'https://twofortyfouram.github.io/android-annotation/', 'https://twofortyfouram.github.io/android-plugin-api-for-locale/')
+        exclude '**/R.java'
         exclude 'com/twofortyfouram/locale/sdk/host/internal**'
     }
 }
@@ -118,7 +121,7 @@ android.libraryVariants.all { variant ->
     project.artifacts.add('archives', tasks["${variant.name}SourceJar"]);
 }
 
-task findbugs(type: FindBugs) {
+task findbugs(type: FindBugs, dependsOn: ':pluginHostSdkLib:compileReleaseSources') {
     ignoreFailures = true
     classes = fileTree('build/intermediates/classes/release/')
     source = fileTree('src/main/java/')
