--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,12 @@
+# Many CI systems start with the intention of having convention over configuration, and trying to make things look nice and easy to get started.  This can fall apart pretty quickly, if the convention isn't flexible enough or isn't keeping up with the latest developments.  That is what happened here, and this CI configuration is gross.
+# There are a number of custom things happening in this script that deviate from CircleCI's Android documentation.  The reasons are 1. performance and 2. portability between this and some other CI systems we use for other projects.
+# To speed up builds, our own versions of gcloud and the Android SDK are downloaded to a separate directory and cached.  This saves about 5 minutes per build.  Updating the preinstalled components is a pain, because we don't want to cache directories that might get overwritten with a new container image later.
+# Note: when forking this repo, environment variables GCLOUD_SERVICE_KEY_BASE_64 and GCLOUD_PROJECT_ID need to be defined for CI builds to work.
+# Note that this doesn't work to prefix the path.  CircleCI adds more crap to the beginning of PATH after we try to define it, including an old version of glcoud.  So each many invocations are prefixed with an override of PATH.
+# machine:
+#  environment:
+#    PATH: "/home/ubuntu/mybin/gcloud/bin:${PATH}"
+
 general:
   branches:
     ignore:
@@ -7,45 +16,38 @@ machine:
   java:
     version: oraclejdk8
   environment:
-    GRADLE_OPTS: '-Dorg.gradle.daemon=true'
+    ANDROID_HOME: "/home/ubuntu/mybin/android-sdk-linux"
 
 dependencies:
   pre:
-    # Need docs for the JavaDoc task.
-    - echo y | android update sdk --no-ui --all --filter "doc"
-    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
-    - echo y | android update sdk --no-ui --all --filter "platform-tools"
-    - echo y | android update sdk --no-ui --all --filter "tools"
-    - echo y | android update sdk --no-ui --all --filter "build-tools-25.0.2"
-    - mkdir "$ANDROID_HOME/licenses"
-    - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+    - mkdir -p ~/flags
+    - mkdir -p ~/mybin
+    - ./tools/ci/android-sdk-setup.sh ${ANDROID_HOME} 25.2.5 ~/flags/android-sdk "platforms;android-25" "build-tools;25.0.2" "platform-tools" "docs" "extras;android;m2repository"
+    - PATH="/home/ubuntu/mybin/gcloud/bin:${PATH}" && ./tools/ci/google-cloud-test-lab-setup.sh /home/ubuntu/mybin/gcloud 144.0.0 ~/flags/gcloud-setup ${GCLOUD_SERVICE_KEY_BASE_64} ${GCLOUD_PROJECT_ID}
   override:
     - ./gradlew resolveAllDependencies
   cache_directories:
-    - .gradle
+    - ".gradle"
+    - "/home/ubuntu/flags"
+    - "/home/ubuntu/mybin"
+    - "/home/ubuntu/.android"
 
 test:
   override:
-    # Ideally tests would execute on at least min and target SDK.  The challenge
-    # is collecting the test results and coverage when there are multiple 
-    # executions.  Tests currently run against 22, because 23 hangs on CircleCI.
-    - emulator -avd circleci-android22 -no-audio -no-window:
-        background: true
-        parallel: true
-    - circle-android wait-for-boot
+    - ./gradlew assemble assembleDebugAndroidTest lint findbugs releaseJavadoc dependencyUpdates --profile
 
-    # The emulator lags even after wait-for-boot, causing tests against the
-    # emulator to fail with a timeout.  An explicit sleep isn't ideal because
-    # it adds extra time to every build, however this is good enough for now.
-    - sleep 30
+    - mkdir -p build/gcloud_logs
+    - PATH="/home/ubuntu/mybin/gcloud/bin:${PATH}" && gcloud beta test android run tools/gcloud.yml:pluginHostSdkLib 2>&1 | tee build/gcloud_logs/pluginHostSdkLib-log.txt
 
-    # Logs will be collected as an artifact, which makes any future test
-    # failure easier to debug.
-    - adb logcat:
-        background: true
+    # Pull JUnit test results and JaCoCo coverage.  They'll be placed in the directories that a standard `connectedCheck` would put them in.
+    - PATH="/home/ubuntu/mybin/gcloud/bin:${PATH}" && ./tools/ci/google-cloud-test-lab-fetch-results.sh pluginHostSdkLib build/gcloud_logs "Nexus4-19-en-portrait" "NexusLowRes-25-en-portrait"
 
-    - ./gradlew assemble connectedCheck lint findbugs releaseJavadoc dependencyUpdates --stacktrace --profile
+    # Convert the coverage.ec files into readable reports
+    - ./gradlew createDebugCoverageReport -x connectedDebugAndroidTest
 
-    # copy the artifacts and test reports
+
+    - cp -r build/reports/profile $CIRCLE_ARTIFACTS
+    - cp -r build/dependencyUpdates $CIRCLE_ARTIFACTS
     - cp -r pluginHostSdkLib/build/outputs $CIRCLE_ARTIFACTS
+    - cp -r pluginHostSdkLib/build/reports $CIRCLE_ARTIFACTS
     - cp -r pluginHostSdkLib/build/outputs/androidTest-results/* $CIRCLE_TEST_REPORTS
