--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 // Moar memory is required for in-process dex.
 org.gradle.jvmargs=-Xmx2g
 
+// Enable automatic download of Android SDK components.
+android.builder.sdkDownload=true
+
 
 // Android build details
 ANDROID_BUILD_TOOLS_VERSION=25.0.2
@@ -19,7 +22,7 @@ ANDROID_SUPPORT_ANNOTATION_VERSION_MATCHER=]25.0.0,)
 ANDROID_SUPPORT_V4_VERSION_MATCHER=]25.0.0,)
 ESPRESSO_CORE_VERSION_MATCHER=2.2.2
 ESPRESSO_INTENTS_VERSION_MATCHER=2.2.2
-GRADLE_VERSIONS_PLUGIN_VERSION_MATCHER=0.13.0
+GRADLE_VERSIONS_PLUGIN_VERSION_MATCHER=0.14.0
 JCIP_ANNOTATIONS_VERSION_MATCHER=1.0
 TWOFORTYFOURAM_ANNOTATION_VERSION_MATCHER=[2.0.0,3.0[
 TWOFORTYFOURAM_ASSERTION_VERSION_MATCHER=[1.1.1,2.0[
@@ -29,10 +32,7 @@ TWOFORTYFOURAM_SPACKLE_VERSION_MATCHER=[2.0.0,3.0[
 TWOFORTYFOURAM_TEST_VERSION_MATCHER=[3.0.0,4.0[
 
 
-// Toggle predexing.  Should be disabled for CI
-IS_PREDEXING_ENABLED=true
-
-// Toggle Jacoco code coverage reports
+// Toggle JaCoCo code coverage reports
 IS_COVERAGE_ENABLED=true
 
 
